--- a/todo_list_js_css/index.html
+++ b/todo_list_js_css/index.html
@@ -14,8 +14,10 @@
     <div class="card">
       <h1 class="main-ttl">Todo</h1>
       <div class="form-blk">
-        <input type="text" name="todo" id="todo" class="text-box todo" placeholder="Add new..." />
-        <button class="btn btn-submit" onclick="newElement()">+</button>
+        <form action="" id="todo_form">
+          <input type="text" name="todo" id="todo" class="text-box todo" placeholder="Add new..." />
+          <button class="btn btn-submit" type="submit">+</button>
+        </form>
       </div>
       <div class="filter-blk">
         <span id="all" class="btn btn-link active">All</span>
