--- a/todo_list_jquery_tailwind/index.html
+++ b/todo_list_jquery_tailwind/index.html
@@ -18,29 +18,36 @@
           <input type="text" name="todo" id="input" class="todo w-full border border-inherit">
         </div>
         <div class="w-auto mx-1">
-          <button type="submit" class="ml-auto text-medium font-bold bg-blue-500 text-white px-3 py-2 rounded" id="btn-submit">
-            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
+          <button type="submit" class="ml-auto text-medium font-bold bg-blue-500 text-white px-3 py-2 rounded"
+            id="btn-submit">
+            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+              stroke="currentColor" class="w-6 h-6">
               <path stroke-linecap="round" stroke-linejoin="round" d="M12 4.5v15m7.5-7.5h-15" />
             </svg>
           </button>
         </div>
       </div>
       <div class="filter-blk flex">
-        <span id="all" class="mx-1 text-center font-medium bg-neutral-100 text-gray-500 px-3 py-2 rounded w-full active">All</span>
-        <span id="active" class="mx-1 text-center font-medium bg-neutral-100 text-gray-500 px-3 py-2 rounded w-full">Active</span>
-        <span id="completed" class="mx-1 text-center font-medium bg-neutral-100 text-gray-500 px-3 py-2 rounded w-full">Completed</span>
+        <span id="all"
+          class="mx-1 text-center font-medium bg-neutral-100 text-gray-500 px-3 py-2 rounded w-full active">All</span>
+        <span id="active"
+          class="mx-1 text-center font-medium bg-neutral-100 text-gray-500 px-3 py-2 rounded w-full">Active</span>
+        <span id="completed"
+          class="mx-1 text-center font-medium bg-neutral-100 text-gray-500 px-3 py-2 rounded w-full">Completed</span>
       </div>
       <ul class="resultList"></ul>
-      <h5 class="total text-gray-400"><span id="total"></span> items left</h5> 
+      <h5 class="total text-gray-400"><span id="total"></span> items left</h5>
     </form>
     <div class="filter flex">
-      <button class="mx-1 text-medium font-medium bg-stone-100 text-gray-500 px-3 py-2 rounded w-full" id="btn-checkall">Check All</button>
-      <button class="mx-1 text-medium font-medium bg-stone-100 text-gray-500 px-3 py-2 rounded w-full" id="btn-deleteall">Clear Completed</button>
+      <button class="mx-1 text-medium font-medium bg-stone-100 text-gray-500 px-3 py-2 rounded w-full"
+        id="btn-checkall">Check All</button>
+      <button class="mx-1 text-medium font-medium bg-stone-100 text-gray-500 px-3 py-2 rounded w-full"
+        id="btn-deleteall">Clear Completed</button>
     </div>
   </div>
-  <script src="https://cdn.tailwindcss.com?plugins=forms,typography,aspect-ratio,line-clamp"></script>
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
-  <script src="js/jquery.js"></script>
 </body>
+<script src="https://cdn.tailwindcss.com?plugins=forms,typography,aspect-ratio,line-clamp"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
+<script src="js/jquery.js"></script>
 
 </html>
