--- a/todo_list_jquery_css/index.html
+++ b/todo_list_jquery_css/index.html
@@ -7,7 +7,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>To Do List</title>
   <link rel="stylesheet" href="css/style.css" />
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
 </head>
 
 <body>
@@ -15,8 +14,8 @@
     <div class="card">
       <h1 class="main-ttl">Todo</h1>
       <div class="form-blk">
-        <form action="" id="todo-form">
-          <input type="text" name="todo" id="input" class="text-box todo" placeholder="Add new..." />
+        <form action="" id="form">
+          <input type="text" name="todo" class="text-box text_box" placeholder="Add new..." />
           <button type="submit" class="btn btn-submit" id="btn-submit">
             +
           </button>
@@ -37,9 +36,8 @@
       </div>
     </div>
   </div>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
   <script src="js/jquery.js"></script>
 </body>
-<script>
 
-</script>
 </html>
