--- a/todo_list_alpine_tailwind/index.html
+++ b/todo_list_alpine_tailwind/index.html
@@ -16,10 +16,11 @@
     x-init="$watch('todos', (val) => localStorage.setItem('todos', JSON.stringify(val)))">
     <h1 class="py-2 font-semibold">Todo</h1>
     <form
-      @submit.stop.prevent="todos = [].concat({ id: badId(), text: newTodo, completed: false }, todos); newTodo = '';">
+      @submit.stop.prevent="todos = [].concat({ id: todos.length+1, text: newTodo, completed: false }, todos); newTodo = '';">
       <div class="flex py-3">
         <div class="w-full form-blk">
-          <input type="text" name="todo" id="input" class="todo w-full border border-inherit" x-model="newTodo">
+          <input type="text" name="todo" id="input" class="todo w-full border border-inherit" x-model="newTodo"
+            required>
         </div>
         <div class="w-auto mx-1">
           <button class="ml-auto text-medium font-bold bg-blue-500 text-white px-3 py-2 rounded" id="btn-submit">
@@ -87,8 +88,8 @@
               <input type="checkbox" class="mr-2 my-auto checkbox" x-model="todo.completed">
               <label class="task_name my-auto" x-text="todo.text" x-bind:class="{'completed': todo.completed}"
                 @dblclick="updateTask" x-show="!isEditing"></label>
-              <input type="text" x-model="todo.text" x-show="isEditing" @click.away="updateTask"
-                @keydown.enter="disableEditing" @keydown.window.escape="disableEditing"
+              <input type="text" x-model="todo.text" x-show="isEditing" @keydown.enter="disableEditing"
+                @keydown.window.escape="disableEditing"
                 class="bg-white focus:outline-none focus:shadow-outline border border-gray-300 rounded-lg py-2 px-4 appearance-none leading-normal w-128"
                 x-ref="input">
               <b class="delete ml-auto text-red-500" @click="todos = todos.filter(t => t.id !== todo.id)">
@@ -105,7 +106,8 @@
         left</h5>
     </form>
     <div class="action flex">
-      <button class="mx-1 text-medium font-medium bg-stone-100 text-gray-500 px-3 py-2 rounded w-full" id="btn_check" @click="checkAll">Check
+      <button class="mx-1 text-medium font-medium bg-stone-100 text-gray-500 px-3 py-2 rounded w-full" id="btn_check"
+        @click="checkAll">Check
         All</button>
       <button class="mx-1 text-medium font-medium bg-stone-100 text-gray-500 px-3 py-2 rounded w-full"
         @click="todos = todos.filter(t => t.completed != true)">Clear Completed</button>
