--- a/todo_list_alpine_css/index.html
+++ b/todo_list_alpine_css/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>To Do List</title>
+  <title>To Do Listss</title>
   <link rel="stylesheet" href="css/style.css" />
 </head>
 
@@ -13,10 +13,10 @@
   <div class="container" x-data="{ newTodo: '', todos: JSON.parse(localStorage.getItem('todos') || '[]') }"
     x-init="$watch('todos', (val) => localStorage.setItem('todos', JSON.stringify(val)))">
     <div class="card">
-      <h1 class="main-ttl">Todo</h1>
+      <h1 class="main-ttl">Todosss</h1>
       <div class="form-blk">
         <form
-          @submit.stop.prevent="todos = [].concat({ id: todos.length+1, text: newTodo, completed: false }, todos); newTodo = '';">
+          @submit.stop.prevent="todos = .concat({ id: todos.length+1, text: newTodo, completed: false }, todos); newTodo = '';">
           <input type="text" name="todo" id="todo" class="text-box todo" placeholder="Add new..." x-model="newTodo"
             required />
           <button class="btn btn-submit">+</button>
@@ -27,7 +27,7 @@
         <span class="btn btn-link" @click="showActive">Active</span>
         <span class="btn btn-link" @click="showCompleted">Complete</span>
       </div>
-      <ul class="resultList" id="all">
+      <!-- <ul class="resultList" id="all">
         <template x-for="todo in todos">
           <li class="list flex my-3">
             <p class="list-blk">
@@ -44,8 +44,8 @@
             </p>
           </li>
         </template>
-      </ul>
-      <ul class="resultList hide" id="active">
+      </ul> -->
+      <ul class="resultList">
         <template x-for="todo in todos.filter(t => t.completed != true)">
           <li class="list flex my-3">
             <p class="list-blk">
@@ -63,7 +63,7 @@
           </li>
         </template>
       </ul>
-      <ul class="resultList hide" id="completed">
+      <!-- <ul class="resultList hide" id="completed">
         <template x-for="todo in todos.filter(t => t.completed != false)">
           <li class="list flex my-3">
             <p class="list-blk">
@@ -78,11 +78,11 @@
             </p>
           </li>
         </template>
-      </ul>
+      </ul> -->
       <h5 class="total"><span x-text="todos.filter((todo) => todo.completed != true).length"></span> items left</h5>
       <div class="btn-group">
         <button class="btn btn-action" id="btn_check" @click="checkAll">Check All</button>
-        <button class="btn btn-action" @click="todos = todos.filter(myTask => myTask.completed !== true)">
+        <button class="btn btn-action" @click="todos = todos.filter(myTask => myTask.completed != true)">
           Clear Completed
         </button>
       </div>
