--- a/todo_list_alpine_css/index.html
+++ b/todo_list_alpine_css/index.html
@@ -5,21 +5,24 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>To Do Listss</title>
+  <title>To Do List</title>
   <link rel="stylesheet" href="css/style.css" />
 </head>
 
 <body>
-  <div class="container" x-data="{ newTodo: '', todos: JSON.parse(localStorage.getItem('todos') || '[]') }"
+  <div class="container" x-data="{ todos : [], addTask(task){
+                                    this.todos.push(task);
+                                    localStorage.setItem('todos', JSON.stringify(this.todos));
+                                    todos = JSON.parse(localStorage.getItem('todos'));
+                                  },name:''}"
     x-init="$watch('todos', (val) => localStorage.setItem('todos', JSON.stringify(val)))">
     <div class="card">
-      <h1 class="main-ttl">Todosss</h1>
+      <h1 class="main-ttl">Todo</h1>
       <div class="form-blk">
-        <form
-          @submit.stop.prevent="todos = .concat({ id: todos.length+1, text: newTodo, completed: false }, todos); newTodo = '';">
-          <input type="text" name="todo" id="todo" class="text-box todo" placeholder="Add new..." x-model="newTodo"
+        <form @submit.stop.prevent="addTask({ id: todos.length+1, task: name, completed: false}); name = '';">
+          <input type="text" name="todo" id="todo" class="text-box todo" placeholder="Add new..." x-model="name"
             required />
-          <button class="btn btn-submit">+</button>
+          <button class="btn btn-submit" type="submit">+</button>
         </form>
       </div>
       <div class="filter-blk">
@@ -27,33 +30,15 @@
         <span class="btn btn-link" @click="showActive">Active</span>
         <span class="btn btn-link" @click="showCompleted">Complete</span>
       </div>
-      <!-- <ul class="resultList" id="all">
+      <ul class="resultList show" id="all">
         <template x-for="todo in todos">
           <li class="list flex my-3">
             <p class="list-blk">
-            <div class="task_group" x-data="data()">
+            <div class="task_group" x-data="data">
               <input type="checkbox" id="test" class="checkbox" x-model="todo.completed">
-              <label class="task_name" x-text="todo.text" x-bind:class="{'completed': todo.completed}" @click.prevent
+              <label class="task_name" x-text="todo.task" x-bind:class="{'completed': todo.completed}" @click.prevent
                 @dblclick="updateTask" x-show="!isEditing"></label>
-              <input type="text" x-model="todo.text" x-show="isEditing" @click.away="updateTask"
-                @keydown.enter="disableEditing" @keydown.window.escape="disableEditing"
-                class="bg-white focus:outline-none focus:shadow-outline border border-gray-300 rounded-lg py-2 px-4 appearance-none leading-normal w-128"
-                x-ref="input">
-            </div>
-            <b class="delete" @click="todos = todos.filter(t => t.id !== todo.id)">x</b>
-            </p>
-          </li>
-        </template>
-      </ul> -->
-      <ul class="resultList">
-        <template x-for="todo in todos.filter(t => t.completed != true)">
-          <li class="list flex my-3">
-            <p class="list-blk">
-            <div class="task_group" x-data="data()">
-              <input type="checkbox" class="checkbox" x-model="todo.completed">
-              <label class="task_name" x-text="todo.text" x-bind:class="{'completed': todo.completed}" @click.prevent
-                @dblclick="updateTask" x-show="!isEditing"></label>
-              <input type="text" x-model="todo.text" x-show="isEditing" @click.away="updateTask"
+              <input type="text" x-model="todo.task" x-show="isEditing" @click.away="updateTask"
                 @keydown.enter="disableEditing" @keydown.window.escape="disableEditing"
                 class="bg-white focus:outline-none focus:shadow-outline border border-gray-300 rounded-lg py-2 px-4 appearance-none leading-normal w-128"
                 x-ref="input">
@@ -63,26 +48,46 @@
           </li>
         </template>
       </ul>
-      <!-- <ul class="resultList hide" id="completed">
-        <template x-for="todo in todos.filter(t => t.completed != false)">
+      <ul class="resultList hide" id="active">
+        <template x-for="todo in todos.filter(t => t.completed !== true)">
           <li class="list flex my-3">
             <p class="list-blk">
-            <div class="task_group" x-data="data()">
-              <input type="checkbox" class="checkbox" x-model="todo.completed">
-              <label class="task_name" x-text="todo.text" x-bind:class="{'completed': todo.completed}" @click.prevent
+            <div class="task_group" x-data="data">
+              <input type="checkbox" id="test" class="checkbox" x-model="todo.completed">
+              <label class="task_name" x-text="todo.task" x-bind:class="{'completed': todo.completed}" @click.prevent
                 @dblclick="updateTask" x-show="!isEditing"></label>
-              <input type="text" class="editTextBox" x-model="todo.text" x-show="isEditing" @click.away="updateTask"
-                @keydown.enter="disableEditing" @keydown.window.escape="disableEditing" class="" x-ref="input">
+              <input type="text" x-model="todo.task" x-show="isEditing" @click.away="updateTask"
+                @keydown.enter="disableEditing" @keydown.window.escape="disableEditing"
+                class="bg-white focus:outline-none focus:shadow-outline border border-gray-300 rounded-lg py-2 px-4 appearance-none leading-normal w-128"
+                x-ref="input">
             </div>
             <b class="delete" @click="todos = todos.filter(t => t.id !== todo.id)">x</b>
             </p>
           </li>
         </template>
-      </ul> -->
+      </ul>
+      <ul class="resultList hide" id="completed">
+        <template x-for="todo in todos.filter(t => t.completed !== false)">
+          <li class="list flex my-3">
+            <p class="list-blk">
+            <div class="task_group" x-data="data">
+              <input type="checkbox" id="test" class="checkbox" x-model="todo.completed">
+              <label class="task_name" x-text="todo.task" x-bind:class="{'completed': todo.completed}" @click.prevent
+                @dblclick="updateTask" x-show="!isEditing"></label>
+              <input type="text" x-model="todo.task" x-show="isEditing" @click.away="updateTask"
+                @keydown.enter="disableEditing" @keydown.window.escape="disableEditing"
+                class="bg-white focus:outline-none focus:shadow-outline border border-gray-300 rounded-lg py-2 px-4 appearance-none leading-normal w-128"
+                x-ref="input">
+            </div>
+            <b class="delete" @click="todos = todos.filter(t => t.id !== todo.id)">x</b>
+            </p>
+          </li>
+        </template>
+      </ul>
       <h5 class="total"><span x-text="todos.filter((todo) => todo.completed != true).length"></span> items left</h5>
       <div class="btn-group">
         <button class="btn btn-action" id="btn_check" @click="checkAll">Check All</button>
-        <button class="btn btn-action" @click="todos = todos.filter(myTask => myTask.completed != true)">
+        <button class="btn btn-action" @click="delteCompleted">
           Clear Completed
         </button>
       </div>
