--- a/todo_list_alpine_css/index.html
+++ b/todo_list_alpine_css/index.html
@@ -10,32 +10,35 @@
 </head>
 
 <body>
-  <div class="container" x-data="{ todos : [], addTask(task){
-                                    this.todos.push(task);
-                                    localStorage.setItem('todos', JSON.stringify(this.todos));
-                                    todos = JSON.parse(localStorage.getItem('todos'));
-                                  },name:''}"
-    x-init="$watch('todos', (val) => localStorage.setItem('todos', JSON.stringify(val)))">
+  <div class="container" x-data="{ todos : [], 
+                                    addTask(task){
+                                      this.todos.push(task);
+                                      localStorage.setItem('todos', JSON.stringify(this.todos));
+                                      todos = JSON.parse(localStorage.getItem('todos'));
+                                    },
+                                  name:'',
+                                }"
+    >
     <div class="card">
       <h1 class="main-ttl">Todo</h1>
       <div class="form-blk">
         <form @submit.stop.prevent="addTask({ id: todos.length+1, task: name, completed: false}); name = '';">
           <input type="text" name="todo" id="todo" class="text-box todo" placeholder="Add new..." x-model="name"
-            required />
+             />
           <button class="btn btn-submit" type="submit">+</button>
         </form>
       </div>
       <div class="filter-blk">
-        <span class="btn btn-link active" @click="showAll">All</span>
-        <span class="btn btn-link" @click="showActive">Active</span>
-        <span class="btn btn-link" @click="showCompleted">Complete</span>
+        <span class="btn btn-link active" @click="getAll">All</span>
+        <span class="btn btn-link" @click="getActive">Active</span>
+        <span class="btn btn-link" @click="getCompleted">Complete</span>
       </div>
-      <ul class="resultList show" id="all">
+      <ul class="resultList">
         <template x-for="todo in todos">
           <li class="list flex my-3">
             <p class="list-blk">
             <div class="task_group" x-data="data">
-              <input type="checkbox" id="test" class="checkbox" x-model="todo.completed">
+              <input type="checkbox" class="checkbox" x-model="todo.completed" @click="changeStatus(todo.id)">
               <label class="task_name" x-text="todo.task" x-bind:class="{'completed': todo.completed}" @click.prevent
                 @dblclick="updateTask" x-show="!isEditing"></label>
               <input type="text" x-model="todo.task" x-show="isEditing" @click.away="updateTask"
@@ -43,48 +46,12 @@
                 class="bg-white focus:outline-none focus:shadow-outline border border-gray-300 rounded-lg py-2 px-4 appearance-none leading-normal w-128"
                 x-ref="input">
             </div>
-            <b class="delete" @click="todos = todos.filter(t => t.id !== todo.id)">x</b>
+            <b class="delete" @click="todos = todos.filter(t => t.id !== todo.id), localStorage.setItem('todos', JSON.stringify(todos));">x</b>
             </p>
           </li>
         </template>
       </ul>
-      <ul class="resultList hide" id="active">
-        <template x-for="todo in todos.filter(t => t.completed !== true)">
-          <li class="list flex my-3">
-            <p class="list-blk">
-            <div class="task_group" x-data="data">
-              <input type="checkbox" id="test" class="checkbox" x-model="todo.completed">
-              <label class="task_name" x-text="todo.task" x-bind:class="{'completed': todo.completed}" @click.prevent
-                @dblclick="updateTask" x-show="!isEditing"></label>
-              <input type="text" x-model="todo.task" x-show="isEditing" @click.away="updateTask"
-                @keydown.enter="disableEditing" @keydown.window.escape="disableEditing"
-                class="bg-white focus:outline-none focus:shadow-outline border border-gray-300 rounded-lg py-2 px-4 appearance-none leading-normal w-128"
-                x-ref="input">
-            </div>
-            <b class="delete" @click="todos = todos.filter(t => t.id !== todo.id)">x</b>
-            </p>
-          </li>
-        </template>
-      </ul>
-      <ul class="resultList hide" id="completed">
-        <template x-for="todo in todos.filter(t => t.completed !== false)">
-          <li class="list flex my-3">
-            <p class="list-blk">
-            <div class="task_group" x-data="data">
-              <input type="checkbox" id="test" class="checkbox" x-model="todo.completed">
-              <label class="task_name" x-text="todo.task" x-bind:class="{'completed': todo.completed}" @click.prevent
-                @dblclick="updateTask" x-show="!isEditing"></label>
-              <input type="text" x-model="todo.task" x-show="isEditing" @click.away="updateTask"
-                @keydown.enter="disableEditing" @keydown.window.escape="disableEditing"
-                class="bg-white focus:outline-none focus:shadow-outline border border-gray-300 rounded-lg py-2 px-4 appearance-none leading-normal w-128"
-                x-ref="input">
-            </div>
-            <b class="delete" @click="todos = todos.filter(t => t.id !== todo.id)">x</b>
-            </p>
-          </li>
-        </template>
-      </ul>
-      <h5 class="total"><span x-text="todos.filter((todo) => todo.completed != true).length"></span> items left</h5>
+      <h5 class="total"><span x-text="this.todos = todos.filter((todo) => todo.completed != true).length"></span> items left</h5>
       <div class="btn-group">
         <button class="btn btn-action" id="btn_check" @click="checkAll">Check All</button>
         <button class="btn btn-action" @click="delteCompleted">
