--- a/todo_list_alpine_tailwind/index.html
+++ b/todo_list_alpine_tailwind/index.html
@@ -11,108 +11,68 @@
 </head>
 
 <body class="">
-  <div class="container bg-stone-50 mx-auto my-auto p-5 w-1/2 mt-20 shadow-md" x-data="{ todos : [], addTask(task){
-    this.todos.push(task);
-    localStorage.setItem('todos', JSON.stringify(this.todos));
-    todos = JSON.parse(localStorage.getItem('todos'));
-  },name:''}" x-init="$watch('todos', (val) => localStorage.setItem('todos', JSON.stringify(val)))">
-    <h1 class="py-2 font-semibold">Todo</h1>
-    <form @submit.stop.prevent="addTask({ id: todos.length+1, task: name, completed: false}); name = '';">
-      <div class="flex py-3">
-        <div class="w-full form-blk">
-          <input type="text" name="todo" id="input" class="todo w-full border border-inherit" x-model="name" required>
+  <div class="container bg-stone-50 mx-auto my-auto p-5 w-1/2 mt-20 shadow-md"" x-data=" { todos : [], addTask(task){
+    this.todos.push(task); localStorage.setItem('todos', JSON.stringify(this.todos));
+    todos=JSON.parse(localStorage.getItem('todos')); }, name:'', }">
+
+    <div class="">
+      <h1 class="py-2 font-semibold">Todo</h1>
+      <form @submit.stop.prevent="addTask({ id: todos.length+1, task: name, completed: false}); name = '';">
+        <div class="flex py-3">
+          <div class="w-full form-blk">
+            <input type="text" name="todo" id="input" class="todo w-full border border-inherit" x-model="name">
+          </div>
+          <div class="w-auto mx-1">
+            <button type="submit" class="ml-auto text-medium font-bold bg-blue-500 text-white px-3 py-2 rounded"
+              id="btn-submit">
+              <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+                stroke="currentColor" class="w-6 h-6">
+                <path stroke-linecap="round" stroke-linejoin="round" d="M12 4.5v15m7.5-7.5h-15" />
+              </svg>
+            </button>
+          </div>
         </div>
-        <div class="w-auto mx-1">
-          <button type="submit" class="ml-auto text-medium font-bold bg-blue-500 text-white px-3 py-2 rounded"
-            id="btn-submit">
-            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
-              stroke="currentColor" class="w-6 h-6">
-              <path stroke-linecap="round" stroke-linejoin="round" d="M12 4.5v15m7.5-7.5h-15" />
-            </svg>
-          </button>
-        </div>
+      </form>
+      <div class="filter-blk flex">
+        <span @click="getAll"
+          class="mx-1 text-center font-medium bg-neutral-100 text-gray-500 px-3 py-2 rounded w-full active">All</span>
+        <span @click="getActive"
+          class="mx-1 text-center font-medium bg-neutral-100 text-gray-500 px-3 py-2 rounded w-full">Active</span>
+        <span @click="getCompleted"
+          class="mx-1 text-center font-medium bg-neutral-100 text-gray-500 px-3 py-2 rounded w-full">Completed</span>
       </div>
-    </form>
-    <div class="filter-blk flex">
-      <span @click="showAll"
-        class="mx-1 text-center font-medium bg-neutral-100 text-gray-500 px-3 py-2 rounded w-full active">All</span>
-      <span @click="showActive"
-        class="mx-1 text-center font-medium bg-neutral-100 text-gray-500 px-3 py-2 rounded w-full">Active</span>
-      <span @click="showCompleted"
-        class="mx-1 text-center font-medium bg-neutral-100 text-gray-500 px-3 py-2 rounded w-full">Completed</span>
-    </div>
-    <ul class="resultList" id="all">
-      <template x-for="todo in todos">
-        <li class="list my-3">
-          <div class="flex" x-data="data()">
-            <input type="checkbox" class="mr-2 my-auto checkbox" x-model="todo.completed">
-            <label class="task_name my-auto" x-text="todo.task" x-bind:class="{'completed': todo.completed}"
-              @click.prevent @dblclick="updateTask" x-show="!isEditing"></label>
-            <input type="text" x-model="todo.task" x-show="isEditing" @click.away="updateTask"
-              @keydown.enter="disableEditing" @keydown.window.escape="disableEditing"
-              class="bg-white focus:outline-none focus:shadow-outline border border-gray-300 rounded-lg py-2 px-4 appearance-none leading-normal w-128"
-              x-ref="input">
-            <b class="delete ml-auto text-red-500" @click="todos = todos.filter(t => t.id !== todo.id)">
-              <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
-                stroke="currentColor" class="w-6 h-6">
-                <path stroke-linecap="round" stroke-linejoin="round" d="M6 18L18 6M6 6l12 12" />
-              </svg>
-            </b>
-          </div>
-        </li>
-      </template>
-    </ul>
-    <ul class="resultList hide" id="active">
-      <template x-for="todo in todos.filter(t => t.completed != true)">
-        <li class="list my-3">
-          <div class="flex" x-data="data()">
-            <input type="checkbox" class="mr-2 my-auto checkbox" x-model="todo.completed">
-            <label class="task_name my-auto" x-text="todo.task" x-bind:class="{'completed': todo.completed}"
-              @click.prevent @dblclick="updateTask" x-show="!isEditing"></label>
-            <input type="text" x-model="todo.task" x-show="isEditing" @click.away="updateTask"
-              @keydown.enter="disableEditing" @keydown.window.escape="disableEditing"
-              class="bg-white focus:outline-none focus:shadow-outline border border-gray-300 rounded-lg py-2 px-4 appearance-none leading-normal w-128"
-              x-ref="input">
-            <b class="delete ml-auto text-red-500" @click="todos = todos.filter(t => t.id !== todo.id)">
-              <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
-                stroke="currentColor" class="w-6 h-6">
-                <path stroke-linecap="round" stroke-linejoin="round" d="M6 18L18 6M6 6l12 12" />
-              </svg>
-            </b>
-          </div>
-        </li>
-      </template>
-    </ul>
-    <ul class="resultList hide" id="completed">
-      <template x-for="todo in todos.filter(t => t.completed != false)">
-        <li class="list my-3">
-          <div class="flex" x-data="data()">
-            <input type="checkbox" class="mr-2 my-auto checkbox" x-model="todo.completed">
-            <label class="task_name my-auto" x-text="todo.task" x-bind:class="{'completed': todo.completed}"
-              @dblclick="updateTask" x-show="!isEditing"></label>
-            <input type="text" x-model="todo.task" x-show="isEditing" @keydown.enter="disableEditing"
-              @keydown.window.escape="disableEditing"
-              class="bg-white focus:outline-none focus:shadow-outline border border-gray-300 rounded-lg py-2 px-4 appearance-none leading-normal w-128"
-              x-ref="input">
-            <b class="delete ml-auto text-red-500" @click="todos = todos.filter(t => t.id !== todo.id)">
-              <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
-                stroke="currentColor" class="w-6 h-6">
-                <path stroke-linecap="round" stroke-linejoin="round" d="M6 18L18 6M6 6l12 12" />
-              </svg>
-            </b>
-          </div>
-        </li>
-      </template>
-    </ul>
-    <h5 class="total text-gray-400"><span x-text="todos.filter((todo) => todo.completed != true).length"></span> items
-      left</h5>
-    </form>
-    <div class="action flex">
-      <button class="mx-1 text-medium font-medium bg-stone-100 text-gray-500 px-3 py-2 rounded w-full" id="btn_check"
-        @click="checkAll">Check
-        All</button>
-      <button class="mx-1 text-medium font-medium bg-stone-100 text-gray-500 px-3 py-2 rounded w-full"
-        @click="delteCompleted">Clear Completed</button>
+      <ul class="resultList">
+        <template x-for="todo in todos">
+          <li class="list my-3">
+            <div class="flex" x-data="data()">
+              <input type="checkbox" class="mr-2 my-auto checkbox" x-model="todo.completed"
+                @click="changeStatus(event.target,todo.id)">
+              <label class="task_name my-auto" x-text="todo.task" x-bind:class="{'completed': todo.completed}"
+                @click.prevent @dblclick="updateTask" x-show="!isEditing"></label>
+              <input type="text" x-model="todo.task" x-show="isEditing" @click.away="updateTask"
+                @keydown.enter="disableEditing(event.target,todo.id,todo.task)" @keydown.window.escape="disableEditing"
+                class="bg-white focus:outline-none focus:shadow-outline border border-gray-300 rounded-lg py-2 px-4 appearance-none leading-normal w-128"
+                x-ref="input">
+              <b class="delete ml-auto text-red-500" @click="todos = todos.filter(t => t.id !== todo.id)">
+                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+                  stroke="currentColor" class="w-6 h-6">
+                  <path stroke-linecap="round" stroke-linejoin="round" d="M6 18L18 6M6 6l12 12" />
+                </svg>
+              </b>
+            </div>
+          </li>
+        </template>
+        <h5 class="total text-gray-400"><span x-text="todos.filter((todo) => todo.completed != true).length"></span>
+          items
+          left
+        </h5>
+        <div class="action flex">
+          <button class="mx-1 text-medium font-medium bg-stone-100 text-gray-500 px-3 py-2 rounded w-full"
+            id="btn_check" @click="checkAll">Check
+            All</button>
+          <button class="mx-1 text-medium font-medium bg-stone-100 text-gray-500 px-3 py-2 rounded w-full"
+            @click="delteCompleted">Clear Completed</button>
+        </div>
     </div>
   </div>
   <script src="https://cdn.tailwindcss.com?plugins=forms,typography,aspect-ratio,line-clamp"></script>
