add data validation feature

--- a/todo_list_alpine_tailwind/index.html
+++ b/todo_list_alpine_tailwind/index.html
@@ -11,7 +11,7 @@
 </head>
 
 <body class="">
-  <div class="container bg-stone-50 mx-auto my-auto p-5 w-1/2 mt-20 shadow-md"" x-data="data()">
+  <div class="container bg-stone-50 mx-auto my-auto p-5 w-1/2 mt-20 shadow-md" x-data="data()">
 
     <div class="">
       <h1 class="py-2 font-semibold">Todo</h1>
